hphp/hack/test/typecheck/unsafe_cast/await.php.exp
File "await.php", line 8, characters 14-65:
UNSAFE_CAST cannot be used as the operand of an await operation (Typing[4455])
